internal/fixtures/architecture/negative/sqlalchemy-layer/apps/api/src/deepwork_api/transport/bad.py
from sqlalchemy import Column

FORBIDDEN = Column
